--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
          <div class="j-post">
              <h6><br>Write to us at:</h6>
              <p><a href="mailto:designviadesign.com">designviadesign@gmail.com</a></p>
-             <h6>Design via Design: Delhi Office</h6>
+             <h6>Design via Design: Delhi office address</h6>
              <p>F-321, Ground Floor, Old M.B Road Main Market, <br>Lado Sarai, New Delhi - 110030<br>Contact- 011-41802123 +91-9205576042-43<br><br></p>
          </div>
 
