--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
   <div class="section-wrapper" style="background-color:#fff;"><!--page background-->
       <div class="j-wrapper">
 
-         <div class="j-post">
+         <div class="j-post700">
              <h6>Write to us at:</h6>
              <p><a href="mailto:designviadesign.com">designviadesign@gmail.com</a></p>
              <h6>Design via Design: Delhi office address</h6>
