--- a/courses.html
+++ b/courses.html
@@ -84,7 +84,7 @@
 
   <div class="section-wrapper" style="background-color:#fff;"><!--page background-->
       <div class="j-wrapper">
-         <div class="j-post">
+         <div class="j-post700">
 
             <h6 class="mark">Foundation Programme</h6>
                  
@@ -113,9 +113,11 @@
                  <p>5 looks + Indoor + Outdoor + Make-up + free Grooming + Styling Artist + 12 Edited piks</p>
               <br>
 
-              <h6 class="mark2">Dance Classes</h6>
+              <h6 class="mark">Dance Classes</h6>
                  <h3>Monthly and Songs basis</h3>
-          </div>
+                 <br> 
+          </div>  
+
       <div class="clearcolumn"></div>
     </div><!--j-wrapper ends --> 
   </div><!--section wrapper ends--> 
