--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
 
   <div class="section-wrapper" style="background-color:#002233;"><!--page background-->
       <div class="j-wrapper">
-         <div class="j-post">
-             <h1 style="color: #006699;">अपने अंदर की कला को दुनिया के सामने लाने और उसे अगली ऊंचाइयों पर ले जाने के लिए 'डिज़ाइन व्हाया डिज़ाइन' आपका एक मूलभूत मार्गदर्शक है.</h1>
-             <h4 style="color: #006699;">'Design via Design' is your personal guide to bring the design in you, out to the world and to take it to the next level.</h4>
+
+         <div class="j-top">
+             <h1 style="color: #006699;">अपने अंदर की कला को दुनिया के सामने लाने और उसे अगली ऊंचाइयों पर ले जाने के लिए <a href="about.html" style="color:#99bbdd">'डिज़ाइन व्हाया डिज़ाइन'</a> आपका एक मूलभूत मार्गदर्शक है.</h1>
+             <h4 style="color: #006699;"><a href="about.html" style="color:#99bbdd">'Design via Design'</a> is your personal guide to bring the design in you, out in front of  the world and take it to the next level.</h4>
           </div>
       <div class="clearcolumn"></div>
     </div><!--j-wrapper ends --> 
@@ -96,53 +97,62 @@
 
 <!-- **** S E C T I O N ****************************************************************************** -->
 
-  <div class="section-wrapper" style="background-color:#fff;"><!--page background-->
+  <div class="section-wrapper" style="background-color:#fafafa;"><!--page background-->
       <div class="j-wrapper">
-         <div class="j-post">
 
-            <h6>Foundation Programme</h6>
-                 <h3><a href="courses.html">Course Structures</a> </h3>
-                 <p>Arts, Design, Mass Communication, Photography<br>Entrance + Situation test + GDPI + Portfolio</p>
-
-
-              <br>
+          <div class="j-post">
+               <p>The Best in multidisciplinary educational support for Arts & Design. Design via Design provides training for entrance exams of institutes of Art, Design, Mass Communication and Film making.</p>
+               <h3><a href="courses.html">View Course Structures</a> </h3>
           </div>
+
       <div class="clearcolumn"></div>
     </div><!--j-wrapper ends --> 
   </div><!--section wrapper ends--> 
      
 <!-- **** J - A L B U M ****************************************************************************** -->
 
-    <div class="section-wrapper" style="background-color:#f2f2f2;"><!--page background-->
+    <div class="section-wrapper" style="background-color:#ffbb99;"><!--page background-->
       <div class="j-wrapper">
 
       <!--All project list starts -->
           <div class="j-album-wrapper">
-              <ul class="j-album"><span>Schools of Design in India</span>
+              <ul class="j-album"><span>Design Schools in India</span>
                   <!--nid -->
                       <li><a href='#'><img src="images/home/schools_nid.jpg" alt="nid">
                         <span>National Institute of Design<br/><h2 class="tag">Ahmedabad</h2></span></a></li>
-                  <!--nift -->
-                      <li><a href='#'><img src="images/home/schools_nift.jpg" alt="nift">
-                        <span>National Institute of Fashion Technology<br/><h2 class="tag">Delhi, Mumbai, Bangaluru, Chennai,</h2></span></a></li>
                   <!--idc -->
                       <li><a href='#'><img src="images/home/schools_idc.jpg" alt="idc">
                         <span>IDC School of Design, IIT-Bombay<br/><h2 class="tag">Mumbai</h2></span></a></li>
+                  <!--nift -->
+                      <li><a href='#'><img src="images/home/schools_nift.jpg" alt="nift">
+                        <span>National Institute of Fashion Technology<br/><h2 class="tag">Delhi, Mumbai, Bangaluru, Chennai ...</h2></span></a></li>
                   <!--symbi -->
                       <li><a href='#'><img src="images/home/schools_symbi.jpg" alt="symbi">
                         <span>Symbiosis School of Design<br/><h2 class="tag">Pune</h2></span></a></li>
                   <!--srishti -->
                       <li><a href='#'><img src="images/home/schools_srishti.jpg" alt="srishti">
                         <span>Srishti School of Design<br/><h2 class="tag">Bangaluru</h2></span></a></li>
+                  <!--djad -->
+                      <li><a href='#'><img src="images/home/schools_djad.jpg" alt="djad">
+                        <span>D J Academy of Design<br/><h2 class="tag">Coimbatore</h2></span></a></li>
+                  <!--pearl -->
+                      <li><a href='#'><img src="images/home/schools_pearl.jpg" alt="pearl">
+                        <span>pearl Academy<br/><h2 class="tag">New Delhi, Jaipur</h2></span></a></li>
+                  <!--mit -->
+                      <li><a href='#'><img src="images/home/schools_mit.jpg" alt="mit">
+                        <span>MIT Institute of Design<br/><h2 class="tag">Pune</h2></span></a></li>
+                  <!--iicd -->
+                      <li><a href='#'><img src="images/home/schools_iicd.jpg" alt="iicd">
+                        <span>Indian Institute of Craft & Design<br/><h2 class="tag">Jaipur</h2></span></a></li>
+                  <!--iilm -->
+                      <li><a href='#'><img src="images/home/schools_iilm.jpg" alt="iilm">
+                        <span>IILM School of Design<br/><h2 class="tag">Gurgaon</h2></span></a></li>
+                  <!--dsk -->
+                      <li><a href='#'><img src="images/home/schools_dsk.jpg" alt="dsk">
+                        <span>DSK International School of Design<br/><h2 class="tag">Pune</h2></span></a></li>
               </ul>
           </div><!--All project list ends -->
 
-        <!--AD starts -->
-            <div class="j-ad-a">
-              <span>
-                <ul><li><a href="#" target="_blank">View All</a></li></ul>
-              </span>
-            </div><!--AD ends -->
 
       <div class="clearcolumn"></div>
     </div><!--j-wrapper ends --> 
